RESOLVED FIXED215162
{Intersection,Resize,Performance}Observer callbacks get incorrect `this` value
https://bugs.webkit.org/show_bug.cgi?id=215162
Summary {Intersection,Resize,Performance}Observer callbacks get incorrect `this` value
Alexey Shvayka
Reported 2020-08-05 05:06:00 PDT
Attachments
Patch (14.40 KB, patch)
2020-08-07 11:31 PDT, Alexey Shvayka
no flags
Patch (16.45 KB, patch)
2020-08-07 15:00 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-08-07 11:31:31 PDT
Alexey Shvayka
Comment 2 2020-08-07 15:00:39 PDT
Created attachment 406218 [details] Patch Adjust PerformanceObserver expectations.
Geoffrey Garen
Comment 3 2020-08-07 16:03:26 PDT
Comment on attachment 406218 [details] Patch r=me
EWS
Comment 4 2020-08-07 16:20:36 PDT
Committed r265397: <https://trac.webkit.org/changeset/265397> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406218 [details].
Radar WebKit Bug Importer
Comment 5 2020-08-07 16:21:19 PDT
Note You need to log in before you can comment on or make changes to this bug.